--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -133,6 +133,9 @@ aside {
   section.user_info {
     margin-top: 20px;
   }
+  section.group_info {
+    margin-top: 20px;
+  }
   section {
     padding: 10px 0;
     margin-top: 20px;
@@ -211,6 +214,18 @@ input {
 /* Users index */
 
 .users {
+  list-style: none;
+  margin: 0;
+  li {
+    overflow: auto;
+    padding: 10px 0;
+    border-bottom: 1px solid $gray-lighter;
+  }
+}
+
+/* Groups index */
+
+.groups {
   list-style: none;
   margin: 0;
   li {
