--- a/app/assets/stylesheets/groups.scss
+++ b/app/assets/stylesheets/groups.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the Groups controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.select_users {
+  margin-bottom: 10px;
+}
+.select_users span {
+  padding-bottom: 10px;
+  max-height: 5px;
+}
+
+input.btn-primary {
+  margin-top: 15px;
+}
