--- a/app/views/groups/_group.html.erb
+++ b/app/views/groups/_group.html.erb
@@ -1,3 +1,8 @@
 <li>
   <%= link_to group.name, group %>
+  <% if current_user.admin? %>
+    | <%= link_to "update", edit_group_path(group) %> 
+    | <%= link_to "delete", group, method: :delete,
+                                  data: { confirm: "You sure?" } %>
+  <% end %>
 </li>
