--- a/app/views/shared/_message_form.html.erb
+++ b/app/views/shared/_message_form.html.erb
@@ -3,6 +3,7 @@
   <div class="field">
     <%= f.text_area :content, placeholder: "Compose new message..." %>
   </div>
+  <%= f.hidden_field :group_id, :value => @group.id %>
   <%= f.submit "Post", class: "btn btn-primary" %>
   <span class="picture">
     <%= f.file_field :picture, accept: 'image/jpeg,image/gif,image/png' %>
