--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,4 +1,5 @@
 <li id="message-<%= message.id %>">
+  <%= link_to gravatar_for(message.user, size: 50), message.user %>
   <span class="user"><%= link_to message.user.name, message.user %></span>
   <span class="content">
     <%= message.content %>
