--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,8 +2,8 @@
   <aside class="col-md-4">
     <section class="user_info">
       <h1>
+        <%= gravatar_for @user %>
         <%= @user.name %>
-        <%= @user.email %>
       </h1>
     </section>
   </aside>
